fix: aumentando valor de z-index #91

--- a/data/assets/modules/channel-web/inject.css
+++ b/data/assets/modules/channel-web/inject.css
@@ -3,7 +3,7 @@
   display: block;
   position: fixed;
   visibility: none;
-  z-index: 20;
+  z-index: 5001;
   max-height: 100vh;
   max-width: 100vw;
   transition: none;
@@ -19,7 +19,7 @@
     left: auto;
     top: auto;
     bottom: 10%;
-    right: 1.82%;
+    right: 2%;
     width: 76px !important;
     height: 76px !important;
 }
